[NMMA-326] fix special offers items grid spacing

--- a/docroot/themes/custom/boatshow/sass/components/_special-offer.scss
+++ b/docroot/themes/custom/boatshow/sass/components/_special-offer.scss
@@ -8,15 +8,15 @@
   }
 
   .views-row {
-    flex-basis: 100%;
+    width: 100%;
     margin-bottom: 10px;
 
     @include media-breakpoint-up(md) {
-      flex-basis: 50%;
+      width: 50%;
     }
 
     @include media-breakpoint-up(lg) {
-      flex-basis: 25%;
+      width: 25%;
     }
   }
 }
@@ -66,6 +66,10 @@
   .special-offer-title {
     @extend h4;
     text-transform: uppercase;
+  }
+
+  .special-offer-body {
+    word-break: break-word;
   }
 
   .special-offer-booth {
